O/openldap-stack-ha-S04uS2Aco/openldap-stack-ha.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-ltb-passwd
  labels:
    app.kubernetes.io/name: release-name
    helm.sh/chart: ltb-passwd-0.1.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: release-name
    app.kubernetes.io/instance: release-name
---
apiVersion: v1
kind: Service
metadata:
  name: release-name-phpldapadmin
  labels:
    app: phpldapadmin
    chart: phpldapadmin-0.1.2
    release: release-name
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: phpldapadmin
    release: release-name
---
apiVersion: v1
kind: Service
metadata:
  name: release-name
  namespace: S04uS2Aco
  labels:
    app.kubernetes.io/component: release-name
    chart: release-name-3.0.0
    release: release-name
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - name: ldap-port
      protocol: TCP
      port: 389
      targetPort: ldap-port
      nodePort: null
    - name: ssl-ldap-port
      protocol: TCP
      port: 636
      targetPort: ssl-ldap-port
      nodePort: null
  sessionAffinity: None
  selector:
    app.kubernetes.io/component: release-name
    release: release-name
---
apiVersion: v1
kind: Service
metadata:
  name: release-name-headless
  labels:
    app.kubernetes.io/component: release-name
    chart: release-name-3.0.0
    release: release-name
    heritage: Helm
spec:
  ports:
    - port: 389
      name: ldap-port
      targetPort: ldap-port
  clusterIP: None
  selector:
    app.kubernetes.io/component: release-name
    release: release-name
  type: ClusterIP
  sessionAffinity: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-ltb-passwd
  labels:
    app.kubernetes.io/name: release-name
    helm.sh/chart: ltb-passwd-0.1.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.3"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: release-name
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: release-name
        app.kubernetes.io/instance: release-name
    spec:
      imagePullSecrets:
        - name: harbor
      containers:
        - name: ltb-passwd
          image: tiredofit/self-service-password:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /etc/openldap
              name: ldap-conf
      volumes:
        - name: ldap-conf
          configMap:
            name: release-name-ltb-passwd-ldap-cm
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-phpldapadmin
  labels:
    app: phpldapadmin
    chart: phpldapadmin-0.1.2
    release: release-name
    heritage: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpldapadmin
      release: release-name
  template:
    metadata:
      labels:
        app: phpldapadmin
        release: release-name
    spec:
      imagePullSecrets:
        - name: harbor
      containers:
        - name: phpldapadmin
          image: osixia/phpldapadmin:0.9.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name
  labels:
    app.kubernetes.io/name: openldap-stack-ha
    helm.sh/chart: openldap-stack-ha-3.0.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: release-name
    chart: release-name-3.0.0
    release: release-name
    heritage: Helm
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: openldap-stack-ha
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: release-name
  serviceName: release-name-headless
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/configmap-env: a65e0ea08ec6b0308c05dae6fa57607974561fddc8b6816479b1a0ea28505869
      labels:
        app.kubernetes.io/name: openldap-stack-ha
        helm.sh/chart: openldap-stack-ha-3.0.0
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: release-name
        release: release-name
    spec:
      imagePullSecrets:
        - name: harbor
      affinity:
        podAffinity: null
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: openldap-stack-ha
                    app.kubernetes.io/instance: release-name
                    app.kubernetes.io/component: openldap
                namespaces:
                  - default
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity: null
      securityContext:
        fsGroup: 1001
      containers:
        - name: openldap-stack-ha
          image: osixia/openldap:1.5.0
          imagePullPolicy: Always
          args:
            - -l
            - info
          resources:
            limits: {}
            requests: {}
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: ldap-port
              containerPort: 389
            - name: ssl-ldap-port
              containerPort: 636
          livenessProbe:
            tcpSocket:
              port: ldap-port
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 10
          readinessProbe:
            tcpSocket:
              port: ldap-port
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 10
          volumeMounts:
            - name: data
              mountPath: /var/lib/ldap
              subPath: data
            - name: data
              mountPath: /etc/ldap/slapd.d
              subPath: config-data
            - name: certs
              mountPath: /container/service/slapd/assets/certs
      volumes:
        - name: secret-certs
          secret:
            secretName: null
        - name: certs
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - metadata:
        name: data
        annotations: null
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 8Gi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-ltb-passwd
  labels:
    app: release-name
    chart: ltb-passwd-0.1.0
    release: release-name
    heritage: Helm
spec:
  rules:
    - host: ssl-ldap2.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-ltb-passwd
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-phpldapadmin
  labels:
    app: phpldapadmin
    chart: phpldapadmin-0.1.2
    release: release-name
    heritage: Helm
spec:
  rules:
    - host: phpldapadmin.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-phpldapadmin
                port:
                  name: http
---
null
